# nn-from-scratch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: linalg.hpp  neural_network.hpp  utils.hpp
src/: main.cpp  neural_network.cpp  utils.cpp
tests/: test_xor.cpp
